--- a/src/index.css
+++ b/src/index.css
@@ -215,6 +215,10 @@ body {
   }
   .job-postion-company{
     flex-direction: column;
+    align-items: flex-start;
+  }
+  .job-position-info{
+    align-items: center;
   }
   .job-position-avatar {
     position: static;
@@ -226,16 +230,18 @@ body {
   }
 }
 @media (min-width: 600px) {
+  .job-position-body{
+        width: 300px;
+  }
 .job-position-avatar{
   position: static;
   width: 100px;
   height: 100px;
 }
+
 }
 @media (min-width: 1024px) {
-  .job-position-body {
-      align-items: center;
-    }
+  
   
     .job-postion-company {
       flex-direction: row;
