--- a/src/index.css
+++ b/src/index.css
@@ -209,10 +209,28 @@ body {
   flex-direction: column;
   gap: 3rem;
 }
-@media (min-width: 350px) {
+@media (min-width: 349px) {
+  .job-position-info{
+    flex-direction: column;
+  }
+  .job-postion-company{
+    flex-direction: column;
+  }
+  .job-position-avatar{
+    position: static;
+    margin: 0 auto;
+  }
+  
+}
+@media (min-width: 420px) {
   .job-position-body{
     align-items: flex-start;
+        width: 300px;
+    
   }
+     .job-position-info {
+       flex-direction: row;
+     }
   .job-postion-company{
     flex-direction: column;
     align-items: flex-start;
@@ -228,6 +246,7 @@ body {
   .stack{
     gap:0.3rem;
   }
+  
 }
 @media (min-width: 600px) {
   .job-position-body{
